[COLOR springgreen]Elementum:[/COLOR]

[COLOR red]-------------------------------------------------------------------------------------------------------[/COLOR]

[B][COLOR red]v0.1.7[/COLOR][/B]
    - More fixes to piece selection.
    - New linux-armv6/armv7/arm64, android arm/arm64 images for compilation.

[B][COLOR red]v0.1.6[/COLOR][/B]
    - More fixes to piece selection.

[B][COLOR red]v0.1.5[/COLOR][/B]
    - More fixes to piece selection.
    - Default connections per torrent is 200.

[B][COLOR red]v0.1.4[/COLOR][/B]
    - Fixes for piece selection.

[B][COLOR red]v0.1.3[/COLOR][/B]
    - Fixed magnet processing.

[B][COLOR red]v0.1.2[/COLOR][/B]
    - More fixes in migration task!

[B][COLOR red]v0.1.1[/COLOR][/B]
    - Testing migration to libtorrent as a torrent library!
    - If you want to use stable version - revert to 0.0.* version by updating from repository!
    - Please report any found problems on github or gitter chat.

[B][COLOR red]v0.0.71[/COLOR][/B]
    - New memory storage implemented.
    - Added save ability for magnets.
    - Added Antizapret usage.

[B][COLOR red]v0.0.70[/COLOR][/B]
    - Fixed error while browsing trakt movies.
    - New approach to readahead settings.
    - Added Opennic failback.

[B][COLOR red]v0.0.69[/COLOR][/B]
    - Increased memory usage ratio.
    - Fixed small problems.
    - Added option to skip 'resume' if was chosed so in Kodi (no forced resume video).

[B][COLOR red]v0.0.68[/COLOR][/B]
    - Fixed internal proxy hang on arm devices.
    - Added option to disable internal DNS (disable for Tor usage, for example).
    - Fixed player start from search.

[B][COLOR red]v0.0.67[/COLOR][/B]
    - Added built-in HTTP Proxy for usage by searchers (like Burst). It include CloudFlare bypass and DNS over TLS usage.
    - Added functionality for unwatching items in Kodi library, after it was unwatched in Trakt.

[B][COLOR red]v0.0.66[/COLOR][/B]
    - One more fix for navigating in the searches. 